:fix: features section on tablets

--- a/sass/features.sass
+++ b/sass/features.sass
@@ -51,5 +51,11 @@
   .features
     display: flex
     flex-wrap: wrap
+    .item
+      width: 85%
+      margin-bottom: 30px
+      text-align: center
+    .item__description
+      margin-left: -25px
     h2
       width: 100%
